<resources>
    <string name="app_name">eureka waters</string>
    <string name="tab_text_1">All accounts</string>
    <string name="tab_text_2">SMS SENT</string>
    <string name="tab_text_3">SMS NOT SENT</string>
    <string name="edit_title">SENDING BULK MESSAGES</string>
    <string name="edit_warning">You are sending  %1$d messages /n Are you sure?</string>
    <string name="edit_ok">Send Messages</string>
    <string name="edit_cancel">Go Back</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="next">NEXT</string>
    <string name="got_it">GOT IT</string>
    <string name="skip">SKIP</string>
    <string name="slide_1_title">EUREKA WATERS</string>
    <string name="slide_1_desc">Water is expensive, waste not</string>
    <string name="slide_2_title">Always Remember</string>
    <string name="slide_2_desc">Boil Drinking water</string>
    <string name="slide_3_title">Install storage if you have not done so</string>
    <string name="slide_4_title">For queries</string>
    <string name="slide_4_desc">Report Leakeges via 0725940554, 0701805509</string>
    <string name="selection">Please Select an option</string>
    <string name="monitor">MONITOR ACCOUNTS</string>
    <string name="sms_send">SEND SMS</string>
    <string name="query">QUERY CLIENT</string>
    <string name="invoices">INVOICES</string>
    <string name="readings">RECORD READINGS</string>
    <string name="compose">COMPOSE</string>
    <string name="retrieve">RETRIEVE FROM SERVER</string>
    <string name="save">save</string>
    <string name="clear">clear</string>
    <string name="prev_reading">Prev-Reading</string>
    <string name="prev_date">Prev-Date</string>
    <string name="client_code">code</string>
    <string name="client_name">name</string>
    <string name="date">date</string>
    <string name="reading">reading</string>
    <string name="value">value</string>

    <string name="sms_page">
        Hello user. Select compose if you want to write your own custom message.
        You need to provide the message subject and the message itself. Retrieve from server provides
        you with already written messages that are saved from a database. </string>
</resources>
