<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen2">

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="0dp"
        android:layout_height="172dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="404dp"
            android:layout_height="129dp"
            app:srcCompat="@drawable/eureka" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="13dp"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="13dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="28dp"
                app:cardBackgroundColor="#80CBC4"
                app:layout_constraintBottom_toTopOf="@+id/appCompatButton2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sms_page"
                    android:textStyle="italic" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButton2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="54dp"
                android:layout_marginLeft="54dp"
                android:layout_marginRight="54dp"
                android:layout_marginStart="54dp"
                android:background="#FFAFE6C2"
                android:text="@string/compose"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/appCompatButton3"
                app:layout_constraintEnd_toEndOf="@+id/cardView5"
                app:layout_constraintStart_toStartOf="@+id/cardView5"
                app:layout_constraintTop_toBottomOf="@+id/cardView5" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButton3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="49dp"
                android:layout_marginEnd="54dp"
                android:layout_marginLeft="54dp"
                android:layout_marginRight="54dp"
                android:layout_marginStart="54dp"
                android:background="#FFAFE6C2"
                android:text="@string/retrieve"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/cardView5"
                app:layout_constraintStart_toStartOf="@+id/cardView5"
                app:layout_constraintTop_toBottomOf="@+id/appCompatButton2" />
        </android.support.constraint.ConstraintLayout>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>